Opened 5 years ago

Closed 5 years ago

#15493 closed bug (fixed)

Haiku Depot error message less than helpful

Reported by: scottmc Owned by: apl-haiku
Priority: high Milestone: R1/beta2
Component: Applications/HaikuDepot Version: R1/Development
Keywords: HaikuDepot Cc:
Blocked By: Blocking:
Platform: All

Description

Many users who are using HaikuDepot have no idea what "log files" are, so when giving them an error message saying to check the log files, but not letting them know what or where to find them is less than helpful. And being left with an Empty HaikuDepot on first install is NOT an acceptable default setting.

Attachments (2)

wherearelogs.png (35.8 KB ) - added by scottmc 5 years ago.
terminal-output.txt (314.1 KB ) - added by scottmc 5 years ago.
/system/apps/HaikuDepot -v trace terminal output

Download all attachments as: .zip

Change History (12)

by scottmc, 5 years ago

Attachment: wherearelogs.png added

comment:1 by scottmc, 5 years ago

This was in newly installed hrev53595

comment:2 by scottmc, 5 years ago

Component: - GeneralApplications/HaikuDepot
Milestone: UnscheduledR1/beta2
Owner: changed from nobody to stippi
Priority: normalhigh

comment:3 by apl-haiku, 5 years ago

Can you please run HaikuDepot with;

/system/apps/HaikuDepot -v trace

...find the problem in the log trace and paste it here so that it is possible to understand what the error is so that it can be fixed or if it is expected behaviour, to show a better error message.

comment:4 by apl-haiku, 5 years ago

Owner: changed from stippi to apl-haiku
Status: newassigned

by scottmc, 5 years ago

Attachment: terminal-output.txt added

/system/apps/HaikuDepot -v trace terminal output

comment:5 by diver, 5 years ago

This shouldn't happen after hrev53578. Are you sure it was a clean install?

comment:6 by apl-haiku, 5 years ago

Some changes related to this have just merged (https://review.haiku-os.org/c/haiku/+/1980). The logs from this area should better identify the source of the problem and the change also implements some locking during start-up around directory creation. Once this is built into a nightly, can you please retry to see if the problem is still there for you and if the problem is still there could you please attach a new log trace for me.

comment:7 by kallisti5, 5 years ago

~Is this one still an issue? I see changes around "improving error messages" as well as a potentially solved issue in hrev53578.~

EDIT: Scratch that... the issue was fixed, but the error verbosity in HaikuDepot still needs improved.

Last edited 5 years ago by kallisti5 (previous) (diff)

comment:8 by scottmc, 5 years ago

I'll try a fresh install sometime this week and update this if needed.

comment:9 by scottmc, 5 years ago

Ok, HaikuDepot came right up on a fresh install using hrev53894 so I'd call this fixed.

comment:10 by diver, 5 years ago

Resolution: fixed
Status: assignedclosed
Note: See TracTickets for help on using tickets.