src/apps/haikudepot/server/ServerReferenceDataUpdateProcess.cpp
@@ -74,6 +74,7 @@ ServerReferenceDataUpdateProcess::UrlPathComponent()
 status_t
 ServerReferenceDataUpdateProcess::GetLocalPath(BPath& path) const
 {
+	AutoLocker<BLocker> locker(fModel->Lock());
 	return fModel->DumpExportReferenceDataPath(path);
 }
 
